# IMAS-Validator

./: .coveragerc  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  asv.conf.json  beep.py  conftest.py  pyproject.toml  setup.cfg
.github/: linting.yml  verify_sphinx_doc.yml
.github/workflows/: publish_pypi.yml  test_with_pytest.yml
benchmarks/: benchmarks.py
ci/: build_docs.sh  linting.sh  run_benchmark.sh  run_pytest.sh
docs/source/: api-hidden.rst  api.rst  ci_config.rst  code_style.rst  conf.py  defining_rules.rst  filter_rules.rst  index.rst  installing.rst  rule_tutorial.rst  tips_and_tricks.rst  usage.rst
docs/source/courses/: basic_user_training.rst
docs/source/courses/basic/: debug.rst  explore.rst  run.rst  setup.rst  write.rst
ids_validator/: __init__.py  __main__.py  _version.py  exceptions.py  setup_logging.py  validate_options.py
ids_validator/assets/ITER/specific/: core_profiles.py  equilibrium.py  summary.py
ids_validator/assets/ITER_SCENARIO/ITER/: core_profiles.py  edge_profiles.py  edge_sources.py  edge_transport.py  equilibrium.py  summary.py
ids_validator/assets/rulesets/custom_ruleset/: __init__.py
ids_validator/assets/rulesets/generic/: __init__.py  core_profiles.py  core_sources.py  core_transport.py  edge_profiles.py  edge_sources.py  edge_transport.py  generic.py  ggd.py  pf_active.py  plasma_profiles.py  plasma_sources.py  plasma_transport.py  radiation.py  summary.py
ids_validator/assets/rulesets/iter/: __init__.py  core_profiles.py  edge_profiles.py  equilibrium.py  summary.py
ids_validator/assets/rulesets/iter_scenarios/: core_profiles.py  equilibrium.py  summary.py
ids_validator/assets/rulesets/machines/iter/: edge_profiles.py  equilibrium.py
ids_validator/assets/rulesets/scenarios/: __init__.py  core_profiles.py  edge_profiles.py  equilibrium.py  summary.py
ids_validator/assets/rulesets/use-cases/scenarios/: edge_sources.py  edge_transport.py  equilibrium.py
ids_validator/cli/: command_parser.py  ids_validator_cli  ids_validator_cli.py  main.py  populate_ids.py  set-iter.sh  test.py
ids_validator/cli/commands/: command_generic.py  command_interface.py  explore_command.py  validate_command.py
ids_validator/cli/test_ruleset/: test_rule.py
ids_validator/common/: utils.py
ids_validator/convert_output/: convert_idsResult_to_xml.py
ids_validator/rapport/: junit_xml_format.py  validationResultGenerator.py
ids_validator/report/: summaryReportGenerator.py  utils.py  validationReportGenerator.py  validationResultGenerator.py
ids_validator/rules/: ast_rewrite.py  data.py  docs_dataclass.py  exceptions.py  helpers.py  loading.py
ids_validator/training/: create_db_entry.py  training.py  training_setup.py
ids_validator/validate/: __init__.py  apply_loop.py  explore.py  ids_wrapper.py  overload_class.py  result.py  result_collector.py  rule_executor.py  test_executor.py  validate.py
imas_validator/: __init__.py  setup_logging.py
imas_validator/assets/codes/efit++/: equilibrium.py  magnetics.py  pf_active.py  pf_passive.py  tf.py
imas_validator/assets/rulesets/efitpp-code/: magnetics.py  pf_passive.py  wall.py
imas_validator/assets/rulesets/efitpp_code/: __init__.py  magnetics.py  pf_active.py  pf_passive.py  tf.py
imas_validator/assets/rulesets/generic/: __init__.py  equilibrium.py  ggd.py
imas_validator/assets/rulesets/scenarios/: equilibrium.py  equilibrium_and_core_profiles.py
imas_validator/cli/: imas_validator_cli.py
imas_validator/common/: cocos.py  utils.py
imas_validator/report/: summaryReportGenerator.py  utils.py
imas_validator/rules/: ast_rewrite.py  data.py  helpers.py
imas_validator/training/: training_setup.py
imas_validator/validate/: ids_wrapper.py  result_collector.py  rule_executor.py  validate.py
src/: _version.py
src/cli/: main.py
src/report/: main.py
src/rules/: checks.py  data.py  discovery.py  helpers.py  loading.py  rule_data_structure.py  rule_loading.py
src/validate/: apply_loop.py  main.py  overload_class.py  result.py  validate.py
tests/: test_apply_loop.py  test_apply_rules.py  test_assert.py  test_ast_rewrite.py  test_basic_comparisons.py  test_basic_math.py  test_basic_validations.py  test_cli.py  test_debug.py  test_debug_dropin.py  test_loading.py  test_numpy.py  test_result_collector.py  test_rule_executor.py  test_rule_helpers.py  test_test_executor.py  test_utils.py  test_validate.py  test_validationReportGenerator.py  test_validationResultGenerator.py  test_version.py
tests/integration/: test_generic_ruleset.py
tests/rulesets/ITER-MD/: core_profiles.py
tests/rulesets/base/ITER-MD/: core_profiles.py
tests/rulesets/base/generic/: common_ids.py  core_profiles.py
tests/rulesets/filter_test/ITER-MD/: core_profiles.py  equilibrium.py
tests/rulesets/integration-test/ITER-MD/: core_profiles.py  equilibrium.py
tests/rulesets/validate-test/ITER-MD/: core_profiles.py
tests/rulesets_env_var/ITER-MD/: common_ids.py
